--- a/src/config.json
+++ b/src/config.json
@@ -1,11 +1,11 @@
 {
-    "app_id": "com.moodle.moodlemobile",
-    "appname": "Moodle Mobile",
-    "desktopappname": "Moodle Desktop",
+    "app_id": "com.aselsi.ebaapp",
+    "appname": "EBA App",
+    "desktopappname": "EBA Desktop",
     "versioncode": 3600,
-    "versionname": "3.6.0",
+    "versionname": "1.0",
     "cache_expiration_time": 300000,
-    "default_lang": "en",
+    "default_lang": "es",
     "languages": {
         "ar": "عربي",
         "bg": "Български",
@@ -52,23 +52,12 @@
     },
     "wsservice": "moodle_mobile_app",
     "wsextservice": "local_mobile",
-    "demo_sites": {
-        "student": {
-            "url": "https:\/\/school.demo.moodle.net",
-            "username": "student",
-            "password": "moodle"
-        },
-        "teacher": {
-            "url": "https:\/\/school.demo.moodle.net",
-            "username": "teacher",
-            "password": "moodle"
-        }
-    },
     "gcmpn": "694767596569",
-    "customurlscheme": "moodlemobile",
-    "siteurl": "",
+    "customurlscheme": "ebaapp",
+    "siteurl": "https://av.estudiosaselsi.org",
+    "demo_sites": "",
     "multisitesdisplay": "",
     "skipssoconfirmation": false,
-    "forcedefaultlanguage": false,
+    "forcedefaultlanguage": true,
     "privacypolicy": "https:\/\/moodle.org\/mod\/page\/view.php?id=8148"
 }
